--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/profile.php?id=100053226127533"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
