--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">sobre</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiência Profissional</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Formação Acadêmica</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">habilidades</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li>
                 </ul>
             </div>
