--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         aplicativos, programas para desktop, tambem atuar na área de hadware, com redes e solucionando problemas.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/brunocardosoo"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/brunocardosoo/brunocardosoo"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/profile.php?id=100053226127533"><i class="fab fa-facebook-f"></i></a>
                     </div>
